--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node --env-file=.env ./bin/www"
   },
   "dependencies": {
     "axios": "^1.8.3",
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "marked": "^15.0.7",
     "morgan": "~1.9.1",
     "server": "file:"
   }
