--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -12,11 +12,12 @@
             "request": "launch",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--user-data-dir=${workspaceFolder}/.vscode-test-user-data",
-                "--extensions-dir=${workspaceFolder}/.vscode-test-extensions"
+                // "--user-data-dir=${workspaceFolder}/.vscode-test-user-data",
+                // "--extensions-dir=${workspaceFolder}/.vscode-test-extensions"
             ],
             "outFiles": ["${workspaceFolder}/out/**/*.js"],
             "preLaunchTask": "${defaultBuildTask}"
-        }
+        },
+        
     ]
 }
