--- a/extension/package.json
+++ b/extension/package.json
@@ -7,10 +7,16 @@
         "vscode": "^1.98.0"
     },
     "categories": [
-        "Other"
+        "Education"
     ],
-    "activationEvents": [],
+    "activationEvents": [
+        "onStartupFinished"
+    ],
     "main": "./out/extension.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/microsoft/vscode-wordcount.git"
+    },
     "contributes": {
         "viewsContainers": {
             "activitybar": [
@@ -50,8 +56,5 @@
         "@vscode/test-electron": "^2.4.1",
         "eslint": "^9.21.0",
         "typescript": "^5.7.3"
-    },
-    "dependencies": {
-        "tutor": "file:"
     }
 }
