--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,8 @@
     "name": "tutor",
     "displayName": "tutor",
     "description": "",
-    "version": "0.0.1",
+    "version": "0.1.0",
+    "publisher": "vscodeTutor",
     "engines": {
         "vscode": "^1.98.0"
     },
@@ -23,7 +24,7 @@
                 {
                     "id": "tutor",
                     "title": "Tutor",
-                    "icon": "media/icon.svg"
+                    "icon": "media/icon.png"
                 }
             ]
         },
