--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -17,6 +17,8 @@ services:
             NODE_ENV: production
         ports:
             - 8501:8501
+        restart: on-failure
+        
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
