--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "node-terminal",
             "name": "Run Script: start",
             "request": "launch",
-            "command": "npm run start",
+            "command": "npm run start_local",
             "cwd": "${workspaceFolder}"
         }
     ]
