--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start local": "node --env-file=.env ./bin/www"
+    "start_local": "node --env-file=.env ./bin/www"
   },
   "dependencies": {
     "axios": "^1.8.3",
     "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.31.2",
     "marked": "^15.0.7",
     "morgan": "~1.9.1",
+    "node-cache": "^5.1.2",
     "server": "file:"
   }
 }
